--- a/app/templates/auth/change_password.html
+++ b/app/templates/auth/change_password.html
@@ -7,28 +7,9 @@
     <div class="row">
         <!-- Sidebar -->
         <div class="col-md-3">
-            <div class="card mb-4">
-                <div class="card-header bg-primary text-white">
-                    <h5 class="mb-0">Profile Management</h5>
-                </div>
-                <div class="list-group list-group-flush">
-                    <a href="{{ url_for('auth.profile') }}" class="list-group-item list-group-item-action">
-                        <i class="fas fa-user-circle me-2"></i> My Profile
-                    </a>
-                    <a href="{{ url_for('auth.change_password') }}" class="list-group-item list-group-item-action active">
-                        <i class="fas fa-key me-2"></i> Change Password
-                    </a>
-                    {% if current_user.role == 'student' %}
-                    <a href="#" class="list-group-item list-group-item-action">
-                        <i class="fas fa-graduation-cap me-2"></i> Academic Information
-                    </a>
-                    {% elif current_user.role == 'instructor' %}
-                    <a href="#" class="list-group-item list-group-item-action">
-                        <i class="fas fa-chalkboard-teacher me-2"></i> Teaching Information
-                    </a>
-                    {% endif %}
-                </div>
-            </div>
+            {% with active_page='change_password' %}
+            {% include 'auth/profile_sidebar.html' %}
+            {% endwith %}
         </div>
         
         <!-- Main Content -->
