--- a/app/templates/student/quizzes.html
+++ b/app/templates/student/quizzes.html
@@ -2,8 +2,18 @@
 {% block title %}Quizzes{% endblock %}
 
 {% block content %}
-<div class="container mt-4">
-    <h1>Quizzes</h1>
+<div class="container-fluid">
+    <div class="row">
+        <!-- Sidebar -->
+        <div class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
+            {% include 'student/sidebar.html' %}
+        </div>
+        
+        <!-- Main Content -->
+        <div class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+            <div class="d-sm-flex align-items-center justify-content-between mb-4">
+                <h1 class="h3 mb-0 text-gray-800">Quizzes</h1>
+            </div>
     
     {% if quiz_data %}
         <div class="row">
@@ -84,9 +94,12 @@
             {% endfor %}
         </div>
     {% else %}
-        <div class="alert alert-info">
-            <p>No quizzes are available for your enrolled courses.</p>
+                <div class="alert alert-info">
+                    <p>No quizzes are available for your enrolled courses.</p>
+                </div>
+            {% endif %}
+            </div>
         </div>
-    {% endif %}
+    </div>
 </div>
 {% endblock %} 
